--- a/week6/css/small.css
+++ b/week6/css/small.css
@@ -4,8 +4,24 @@ button {
     font-family: Arial, Helvetica, sans-serif;
 }
 
+main {
+    border: 1px solid black;
+    display: grid;
+    grid-template-rows: 1fr 3.3rem;
+    max-width: 36rem;
+
+}
+
+header {
+    text-align: center;
+}
+
 #tasks p {
     margin: 0;
+}
+
+#task {
+    justify-self: center;
 }
 
 #tasks div {
@@ -13,11 +29,18 @@ button {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    width: 90%;
+    width: 97%;
     max-width: 35rem;
-    margin: 5px;
+    margin: 5px 0px 5px 7px;
 }
 
+#tasks div button {
+    background-color: skyblue;
+    border: none;
+    padding: .75rem;
+}
+
+/* -------CHECKBOX STYLING------- */
 /* the container (label element) */
 #tasks .container {
     display: block;
@@ -85,11 +108,14 @@ button {
     transform: rotate(45deg);
 }
 
-
-#tasks div button {
-    background-color: skyblue;
-    border: none;
-    padding: .75rem;
+.add-todo-div {
+    text-align: center;
+    /* position: sticky;
+    top: 0;
+    left: 3rem; */
+    width: 40rem;
+    max-width: 90%;
+    margin-top: 15px;
 }
 
 .add-todo-div button {
@@ -108,3 +134,30 @@ button {
 .completed {
     background-color: green;
 }
+
+.todo-filters {
+    border: 1px solid black;
+    width: 12.5rem;
+    display: flex;
+    justify-content: space-between;
+    justify-self: center;
+    margin-bottom: 5px;
+}
+
+.todo-filters button {
+    background-color: skyblue;
+    border: none;
+    padding: .75rem;
+}
+
+/* Medium screen */
+@media (min-width: 37.5em) {
+    main {
+        border: none;
+        margin: 0 auto;
+    }
+
+}
+
+/* large screen */
+@media only screen and (min-width: 64rem) {}
