--- a/final-project/css/small.css
+++ b/final-project/css/small.css
@@ -68,8 +68,8 @@ nav ul li button:hover {
 }
 
 /*----------- MAIN --------------*/
-main div {
-    font-family: "Lato", sans-serif;
+main {
+    padding: 10px;
 }
 
 canvas {
